@@ -88,6 +88,8 @@ Bug Fixes:
     an issue for those running on Unix.
  -- Fixed a vicious heap-corrupting bug in HASH_ProcessBuffer (demonstrated
     in MUX 2.1.3.23 Unix-only). My bug.
+ -- Bug #786 - Logging of commands by players set suspect now works. Patch
+    from Shawn Wagner.
 
 Performance Enhancements:
 ~~~~~~~~~~~~~~~~~~~~~~~~
